# ChangeLog for app-misc/cldg-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cldg-meta-11.9 (20 Sep 2011)

  20 Sep 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cldg-meta-11.6.ebuild, +cldg-meta-11.9.ebuild:
  version bump

*cldg-meta-11.6 (18 May 2011)

  18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cldg-meta-11.3.ebuild, +cldg-meta-11.6.ebuild:
  Version bump.

*cldg-meta-11.3 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cldg-meta-11.0.ebuild, +cldg-meta-11.3.ebuild:
  Version bump.

*cldg-meta-10.9-r4 (30 Nov 2010)

  30 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cldg-meta-10.9-r2.ebuild, +cldg-meta-10.9-r4.ebuild:
  Added calculate_noxorg USE flag

*cldg-meta-10.9-r2 (29 Nov 2010)

  29 Nov 2010; Трацевский Александр <alex@gentoo.org>
  -cldg-meta-10.9-r1.ebuild, +cldg-meta-10.9-r2.ebuild:
  Added calculate_nocompiz USE flag

*cldg-meta-10.9-r1 (17 Nov 2010)

  17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cldg-meta-10.9.ebuild, +cldg-meta-10.9-r1.ebuild:
  daily update

  04 Oct 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> cldg-meta-10.9.ebuild:
  Added net-misc/cnetworkmanager

  23 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cldg-meta-10.9.ebuild:
  Stable cldg-meta-10.9

*cldg-meta-10.9 (22 Sep 2010)

  22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cldg-meta-10.8.81.ebuild, +cldg-meta-10.9.ebuild:
  new version

  25 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cldg-meta-10.8.81.ebuild:
  Added Deluge p2p client, remove Transmission.

  16 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cldg-meta-10.8.81.ebuild:
  Added media-video/cheese

*cldg-meta-10.8.81 (13 Aug 2010)

  13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cldg-meta-10.5.83.ebuild, +cldg-meta-10.8.81.ebuild:
  New version of meta-package.
