@@ -1,3 +1,3 @@
-EBUILD cldg-meta-11.9.ebuild 1401 RMD160 efbbd44f47d6ac55aa8daf65bbabf5addfbbaf56 SHA1 09aaf1a927fa4bdfe6f80491b0fe4433dcba0f1a SHA256 076329b03bec7580f8d74cb8c46d3aaa73c101a79fa08f1b89c82f959ac2a3a3
-MISC ChangeLog 3450 RMD160 ff2329bbe2106f732eca5e37ca43a669fbde8d4b SHA1 a9182d104306315793a844e560725bbeed6a7f9a SHA256 b7aaea53a30561a3cf60212a7645fd02e348e4e26f8b10f43a874f014b5771f8
+EBUILD cldg-meta-11.9-r1.ebuild 1384 RMD160 579422a1cfc3622deb85eab42bb33fcc14f50dfc SHA1 3346f0579b9bfff11af7e4cd00c5f876f35a2425 SHA256 584701bb6bcb11c05985d7d4988a5e76c3fb42e2eb507994d063d3c451326ed8
+MISC ChangeLog 3631 RMD160 0bb32a172a21fc9bfa418ce8bd5309778ee28461 SHA1 a8399b92af446c02802d96bef727da0e63454b5d SHA256 32e38b622108048b59130151b23ab67119f4611d3c9e8645708c623d7d83e7b8
 MISC metadata.xml 263 RMD160 596dddaf55974cdaa7642643631b4e506681adde SHA1 56cba5a8dbf3977d7891ec138b75e8fe3eb6fadd SHA256 0a6e854923033ffffca2b1ce19e0b12ae33a4d6a372b2613e3ded5b750899526
