@@ -1,3 +1,3 @@
-EBUILD cldx-meta-11.9.ebuild 1367 RMD160 9058491665a6766c5f8f158988aef1df2d061827 SHA1 71bb3752bfe7bf07f7975c1bbba099cf16d26d91 SHA256 a47527db191b56c2696b5a4d6b03f5ba36d6cf0b91497cbf20ace1f9be345be6
-MISC ChangeLog 4354 RMD160 8781252d8c81ad31ae56a1cc58504c4951b5c05a SHA1 04ad40e7ed01591fd3504fc6917487b4e10752da SHA256 71301f2317cb9515c2b7fcc1e6ef22f92ed94f4534d390a97d4222581e37c8fd
+EBUILD cldx-meta-11.9-r1.ebuild 1443 RMD160 50c261f32c4276923ec5743731be15364918b01a SHA1 979283f50abdb20a7cb4ecb2a826b560de5b4b52 SHA256 27138465d95dd36ba12ab6663664ad4f4dfd54ec3c9e737a0e31ec6c1384ed93
+MISC ChangeLog 4524 RMD160 581386d077ade1b9000b76abb6486d57f9e437de SHA1 ab1d3d92a0312d3208b6909d8faf10e07ab2fa67 SHA256 3f9699d24e8a01c564fab28110d08738f1b8d3d98bad5275050dd4647c59f006
 MISC metadata.xml 262 RMD160 2230fae163c003c26da4221c8b25a0c7b9ed0602 SHA1 9187b064dbcca538b3d3349ac9340fd5869e7e96 SHA256 adfc7d0bbf6ccbdbe03704cb131512d2ccfd9c6f71ac5ebc7746c3539116af7e
