@@ -1,2 +1,1 @@
-=media-libs/libpng-1.5.5
 =media-libs/gd-2.0.35-r3
