@@ -1,6 +1,8 @@
 <=sys-apps/portage-2.2.0 amd64 x86
 ~media-gfx/splashutils-1.5.4.4 amd64 x86
 
+~media-libs/libpng-1.4.8 amd64 x86
+
 ~sys-apps/iproute2-2.6.38 amd64 x86
 ~sys-kernel/linux-headers-2.6.39 amd64 x86
 
@@ -18,7 +20,7 @@
 
 ~app-emulation/emul-linux-x86-bjdeps-0.1 amd64 x86
 
-~net-print/cnijfilter-3.20 amd64 x86
+~net-print/cnijfilter-3.50 amd64 x86
 
 ~net-print/hplip-3.11.10 amd64 x86
 ~net-print/hplip-plugin-3.11.10 amd64 x86
