@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cldx-meta-11.9-r1 (03 Nov 2011)
+
+  03 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cldx-meta-11.9.ebuild, +cldx-meta-11.9-r1.ebuild:
+  add libpng:1.4
+
 *cldx-meta-11.9 (20 Sep 2011)
 
   20 Sep 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
